--- a/portfolio-app/public/index.html
+++ b/portfolio-app/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
           
-    <title>Portfolio web</title>
+    <title>Portfolio Web</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
